--- a/TODO
+++ b/TODO
@@ -2,7 +2,7 @@
 - Add automatic code quality checker via GitHub Actions
 - Add authentication & authorization with: https://github.com/lexik/LexikJWTAuthenticationBundle
 - Change example values of request bodies for POST and PUT requests in API docs
-- Implement shows
 - Implement reservations
 - Improve error messages on production (explanations are too vague)
 - Write a script to make set up of the project easier
+- Fix interactions between Movie and Genre
