--- a/TODO
+++ b/TODO
@@ -1,12 +1,12 @@
 # TODO
 
-- Add setup with Docker
-- Add automatic code quality checker via GitHub Actions
+- Fix error messages on production (response doesn't provide any necessary details about the problem)
 - Add authentication & authorization with: [Lexik JWT](https://github.com/lexik/LexikJWTAuthenticationBundle)
-- Change example values of request bodies for POST and PUT requests in API docs
 - Implement reservations
-- Improve error messages on production (explanations are too vague)
+- Add Docker development setup
+- Change example values of request bodies for POST and PUT requests in API docs
 - Sort entities (Genre and Hall) by id when returning all of them
-- Add Show data fixtures
 - Improve and/or fix unit and integration tests for Genre and Hall
-- Implement Show sorting by title, genre and date
+- Add Show data fixtures
+- Implement Show sorting by date, genre and title
+- Improve factories implementation
